--- a/css/styles.css
+++ b/css/styles.css
@@ -4,8 +4,23 @@
     --gray: #595C55;
     --brown: #513A3A;
     --burgundy: #7D2519;
+    --headerFont: 'Bebas Neue', sans-serif;
+    --font: 'Open Sans', sans-serif;
 }
 
 body {
     box-sizing: border-box;
+    background: black;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    font-family: var(--font);
+    color: white;
+}
+
+.header {
+    font-family: var(--headerFont);
+    color: var(--red);
+    text-shadow: 1px 1px white;
+    font-size: 10em;
 }
