changed text box font size/shadow; resized img (originally scaled down when font was resized)
Font size changed for the area where choices and story content will be displayed above the options buttons. More text will be able to fit w/o scrolling.
Removed text drop shadow to increase readability of smaller font.
Resized main image that scaled down when font was resized.

--- a/css/styles.css
+++ b/css/styles.css
@@ -16,8 +16,8 @@ body {
     align-items: center;
     font-family: var(--headerFont);
     color: white;
-    font-size: 5rem;
-    text-shadow: 1px 1px var(--red) ;
+    font-size: 1.5rem; /*changed from 5rem to 1.5rem*/
+/*    text-shadow: 1px 1px var(--red) ;*/ /*removed to make long lines of text easier to read*/
 }
 
 .header {
@@ -27,9 +27,9 @@ body {
     font-size: 10rem;
 }
 
-img{
-    height: 3em;
-    width: 5em;
+img{ /*edited to account for change in font size that affected img size; scales with breakpoints*/
+    height: 15rem;
+    width: 30rem;
 }
 
 #option-buttons{
