--- a/css/styles.css
+++ b/css/styles.css
@@ -4,6 +4,7 @@
     --gray: #595C55;
     --brown: #513A3A;
     --burgundy: #7D2519;
+    --soft-white: #ECECEC;
     --headerFont: 'Bebas Neue', sans-serif;
     --font: 'Open Sans', sans-serif;
 }
@@ -35,13 +36,18 @@ img{ /*edited to account for change in font size that affected img size; scales 
 
 #option-buttons{
     background: black;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 }
 
 .btn{
-    background-color: white;
+    background-color: var(--soft-white);
     display: flex;
     justify-content: center;
-    width: 100%;
+    width: 80%;
+    margin: .25em;
+    border: 2px solid var(--gray);
 }
 
 .row {
