--- a/css/styles.css
+++ b/css/styles.css
@@ -9,6 +9,7 @@
     --font: 'Open Sans', sans-serif;
 }
 
+
 body {
     box-sizing: border-box;
     background: black;
@@ -26,10 +27,10 @@ body {
     font-family: var(--headerFont);
     color: var(--red);
     text-shadow: 1px 1px white;
-    font-size: 10rem;
+    font-size: 7rem;
 }
 
-img{ /*edited to account for change in font size that affected img size; scales with breakpoints*/
+img { /*edited to account for change in font size that affected img size; scales with breakpoints*/
     height: 15rem;
     width: 30rem;
 }
@@ -48,9 +49,15 @@ img{ /*edited to account for change in font size that affected img size; scales 
     width: 80%;
     margin: .25em;
     border: 2px solid var(--gray);
+    border-radius: .4em;
 }
 
 .row {
     display: flex;
     justify-content: center;
+}
+
+.row-text {
+    height: 7em;
+    margin-top: 1.1em;
 }
